src/main/java/com/example/GemSkillAssessment/error/NotAcceptableException.java
package com.example.GemSkillAssessment.error;

public class NotAcceptableException extends RuntimeException {
    public NotAcceptableException(String message) {
        super(message);
    }
}
